truenas-scale/apps/flux-system/addons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    hajimari.io/enable: "false"
   # external-dns.home.arpa/enabled: "true"
    probe.home.arpa/enabled: "false"
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host "flux-receiver.${EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
